Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38651

Android: Warning when deploying "Dependency not found: .... platforminputcontexts"

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.3.1
    • 5.3.0 RC1
    • Packaging & Installer
    • None
    • Android
    • d704d72a85f53d9ad346afd042e33d1d7c270e7c

    Description

      Using RC qt-opensource-mac-x64-android-ios-5.3.0-RC_2014-04-27_10-54-10-50.dmg

      In Qt 5.3. RC on Android when deploying a default Qt Quick Controls app to a device, the following warnings now appear (does not with 5.2.1):

      11:07:14: Pulling files necessary for debugging.
      11:07:14: Package deploy: Running command '/Users/caroline/Android/adt-bundle-mac-x86_64-20131030/sdk/platform-tools/adb -s 08457515 pull /system/bin/app_process /Users/caroline/testcases/build-testrccont-Android_for_armeabi_v7a_GCC_4_8_Qt_5_3_0_Qt_5_3_0_for_Android_armv7-Debug/app_process'.
      11:07:14: Package deploy: Running command '/Users/caroline/Android/adt-bundle-mac-x86_64-20131030/sdk/platform-tools/adb -s 08457515 pull /system/lib/libc.so /Users/caroline/testcases/build-testrccont-Android_for_armeabi_v7a_GCC_4_8_Qt_5_3_0_Qt_5_3_0_for_Android_armv7-Debug/libc.so'.
      Warning: Dependency not found: /Users/caroline/Qt5.3.0/RCoff50/5.3/android_armv7/plugins/platformthemes
      Warning: Dependency not found: /Users/caroline/Qt5.3.0/RCoff50/5.3/android_armv7/plugins/platforminputcontexts
      3616 KB/s (10565835 bytes in 2.853s)
      Generating Android Package
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes